Fix dropdown z-index and demo component

--- a/app/assets/stylesheets/components/_dropdown.sass
+++ b/app/assets/stylesheets/components/_dropdown.sass
@@ -21,6 +21,7 @@
     left: 0
     position: absolute
     right: 0
+    z-index: 5
 
     .dropdown-menu-item
       border-bottom: 1px solid $border
